<resources>
    <string name="app_name">AppEjemploMascotas</string>
    <string name="TituloApp">LoVet</string>
    <string name="Campo_Nombre">Ingrese su nombre</string>
    <string name="Campo_apellido">Ingrese su apellido</string>
    <string name="campo_tipo_documento">Ingrese el tipo de documento</string>
    <string name="campo_numero_documento">Ingrese el número de documento</string>
    <string name="campo_email">Ingrese el email</string>
    <string name="campo_celular">Ingrese el número celular</string>
    <string name="boton_registrar_usuario">Registrar</string>
    <string name="campo_nombre_mascota">Ingrese el nombre de su mascota</string>
    <string name="campo_edad_mascota">Ingrese la edad de su mascota</string>
    <string name="content_description_lottie_animation">Animación de un perro saliendo de una taza tipo mug</string>
    <string name="logo_app_descritption">logo de Nativ App</string>
    <string name="TituloRegistrarUsuario">Registro Usuario</string>
    <string name="TituloRegistrarMascota">Registro Mascota</string>
    <string name="login_nombre_usuario">Ingrese su email</string>
    <string name="login_contrasenha">Ingrese su contraseña</string>
    <string name="TituloInicioSesion">Iniciar Sesión</string>
    <string name="boton_inicio_sesion">Iniciar Sesión</string>
    <string name="link_recuperar_contrasena">Olvidaste tu contraseña?</string>
    <string name="boton_login_registrarse">Registrate</string>
    <string name="campo_contrasena">Ingrese su contraseña</string>
    <string name="boton_registrar_mascota">Registrar Mascota</string>
    <string name="recover_campo_email">Ingrese su correo electrónico</string>
    <string name="TituloRecoverPass">Recuperar contraseña</string>
    <string name="button_recover_pass">Enviar</string>
    <string name="TítuloHome">Bienvenidos a NativApp</string>
    <string name="TituloMisMascotas">Mis Mascotas</string>
    <string name="TituloVetes">Veterinarios</string>
    <string name="TituloAgendarBath">Agendar Baño</string>
    <string name="TituloMisBaños">Mis Baños</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_agendar_banho">Programar Baño</string>
</resources>