<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recuperarContrasenha"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="134dp"
            android:text="@string/boton_inicio_sesion"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/btn_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="146dp"
            android:text="@string/boton_login_registrarse"
            app:cornerRadius="10dp" />

        <TextView
            android:id="@+id/inicioSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_inicio_sesion"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="103dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="103dp"
            android:fontFamily="@font/audiowide"
            android:text="@string/TituloInicioSesion"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/logo_inicio_sesion"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@mipmap/ic_nativ_app_foreground" />

        <TextView
            android:id="@+id/login_nombreUsuario"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/inicioSesion"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="54dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="55dp"
            android:background="@drawable/redondear_bordes_campos"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/login_nombre_usuario"
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/login_ingresarContrasenha"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/login_nombreUsuario"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="54dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="56dp"
            android:background="@drawable/redondear_bordes_campos"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/login_contrasenha"
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/recuperarContrasenha"
            android:layout_width="237dp"
            android:layout_height="30dp"
            android:layout_below="@+id/login_ingresarContrasenha"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="54dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="120dp"
            android:paddingStart="10dp"
            android:text="@string/link_recuperar_contrasena"
            android:textColor="@color/design_default_color_primary" />
    </RelativeLayout>
</layout>