<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/registrarUsuario"
            android:layout_width="260dp"
            android:layout_height="49dp"
            android:layout_below="@+id/logo_registro_usuario"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="54dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="55dp"
            android:fontFamily="@font/audiowide"
            android:text="@string/TituloRegistrarUsuario"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/nombreUsuario"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/registrarUsuario"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="54dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="55dp"
            android:background="@drawable/redondear_bordes_campos"
            android:hint="@string/Campo_Nombre"
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/apellidoUsuario"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/nombreUsuario"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="54dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="55dp"
            android:background="@drawable/redondear_bordes_campos"
            android:hint="@string/Campo_apellido"
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/apellidoUsuario"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="54dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="55dp"
            android:background="@drawable/redondear_bordes_campos"
            android:hint="@string/campo_email"
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tipoID"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/email"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="54dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="55dp"
            android:background="@drawable/redondear_bordes_campos"
            android:hint="@string/campo_tipo_documento"
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/numID"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/tipoID"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="54dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="55dp"
            android:background="@drawable/redondear_bordes_campos"
            android:hint="@string/campo_numero_documento"
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/numCel"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/numID"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="54dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="55dp"
            android:background="@drawable/redondear_bordes_campos"
            android:hint="@string/campo_celular"
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/logo_registro_usuario"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@mipmap/ic_nativ_app_foreground" />

        <Button
            android:id="@+id/btn_reg_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/numCel"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="54dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="55dp"
            android:text="@string/boton_registrar_usuario"
            app:cornerRadius="10dp" />
    </RelativeLayout>
</layout>