<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient1">

    <EditText
        android:id="@+id/recover_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/recoverPassTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/redondear_bordes_campos"
        android:ems="10"
        android:hint="@string/recover_campo_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        android:autofillHints="@string/recover_campo_email" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:src="@mipmap/ic_nativ_app_foreground" />

    <TextView
        android:id="@+id/recoverPassTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="55dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/TituloRecoverPass"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/recover_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recover_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/button_recover_pass"
        android:textColor="@color/white"
        app:cornerRadius="20dp" />
</RelativeLayout>