<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_registro_pet"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@mipmap/ic_nativ_app_foreground" />

        <EditText
            android:id="@+id/nombreMascota"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_below="@+id/registrarMascota"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="59dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="52dp"
            android:background="@drawable/redondear_bordes_campos"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/campo_nombre_mascota"
            android:paddingStart="10dp"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registrarMascota" />

        <EditText
            android:id="@+id/edadMascota"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_below="@+id/tipoMascota"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="57dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="53dp"
            android:background="@drawable/redondear_bordes_campos"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/campo_edad_mascota"
            android:paddingStart="10dp"
            android:textAlignment="viewStart"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tipoMascota" />

        <Button
            android:id="@+id/registarMascota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tipoBanho"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="55dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="29dp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/boton_registrar_mascota"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tipoBanho" />

        <Spinner
            android:id="@+id/tipoMascota"
            style="@style/spinner_style"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_below="@+id/nombreMascota"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="59dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="52dp"
            android:dropDownSelector="@drawable/dropdown_selector"
            android:entries="@array/tipoMascotas"
            android:paddingStart="10dp"
            android:spinnerMode="dropdown"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombreMascota"
            tools:ignore="RtlSymmetry,DuplicateClickableBoundsCheck" />

        <Spinner
            android:id="@+id/tipoBanho"
            style="@style/spinner_style"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_below="@+id/edadMascota"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="59dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="52dp"
            android:dropDownSelector="@drawable/dropdown_selector"
            android:entries="@array/tipoBanio"
            android:paddingStart="10dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edadMascota"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/registrarMascota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_registro_pet"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="55dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="55dp"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/TituloRegistrarMascota"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_registro_pet" />



    </RelativeLayout>
</layout>